# fectest

./: .gitignore  CMakeLists.txt  README.md
libgf2/: gf2.py  test.py
libgf2-old/: .hg_archival.txt  .hgignore  .project  .pydevproject
libgf2-old/src/libgf2/: __init__.py  fastgf2mulmod.pyx  lfsr.py  util.py
libgf2-old/src/tests/: test_gf2.py
src/: fec.c  fec.h  fec_test.c  fec_test3.c  fec_test3.go  output.txt  rs.c  rs_simple.py
